[mantine.dev] Cleanup home page, fix issues on mobile

--- a/apps/mantine.dev/src/components/HomePage/HomePage.module.css
+++ b/apps/mantine.dev/src/components/HomePage/HomePage.module.css
@@ -8,7 +8,7 @@
   --hp-block-spacing: 120px;
 
   @mixin smaller-than $mantine-breakpoint-md {
-    --hp-column-max-width: calc(100vw - 50px);
+    --hp-column-max-width: calc(100vw - 48px);
     --hp-block-spacing: 40px;
   }
 
