--- a/apps/mantine.dev/src/components/HomePage/HomePageDarkColorScheme/HomePageDarkColorScheme.module.css
+++ b/apps/mantine.dev/src/components/HomePage/HomePageDarkColorScheme/HomePageDarkColorScheme.module.css
@@ -37,3 +37,7 @@
 .demo {
   margin-top: var(--mantine-spacing-xl);
 }
+
+.code {
+  max-width: calc(100vw - 42px);
+}
